<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >


        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_name_label" />

		
	        <EditText
	            android:id="@+id/edit_category"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/edit_category_label" />

	        <TextView
	            android:id="@+id/textView1234"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            
	            android:hint="BIS"
	            style="@android:style/Widget.DeviceDefault.Light.Spinner"
	            />
	        
				
      
		        <LinearLayout
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:orientation="horizontal" >
            
		        <LinearLayout
		            android:layout_width="wrap_content"
		            android:layout_height="fill_parent"
		            android:orientation="vertical" >
		             <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/edit_expiry_label" />
            
            
			        <DatePicker
				        android:id="@+id/edit_picker_expiry"
				        android:layout_marginTop="0dp"
				        android:calendarViewShown="false"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content" />
		</LinearLayout>
		  <LinearLayout
		            android:layout_width="wrap_content"
		            android:layout_height="fill_parent"
		            android:orientation="vertical" >
        
		         <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/drawer" />
      
			        <NumberPicker
			            android:id="@+id/edit_picker_categorie"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content" />
			        </LinearLayout>
				</LinearLayout>
        


        


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_notifications_label" />

        <Spinner
            android:id="@+id/edit_spinner_notifications"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/edit_button_cancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_cancel" />

            <Button
                android:id="@+id/edit_button_done"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_done" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/edit_button_remove"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_remove" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>